UI fixes for buttons and expander on mobile version, small modal fix

--- a/Intiri.Client/src/app/pages/end-user-pages/moodboard-details/moodboard-details.page.scss
+++ b/Intiri.Client/src/app/pages/end-user-pages/moodboard-details/moodboard-details.page.scss
@@ -4,13 +4,13 @@
   text-transform: none;
 }
 
-.fixed-bottom {
-  @apply xl:pl-[75px] h-[160px] lg:h-[90px];
-  padding-top: 17px;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  background-color: #EFE8DE;
-  left: 0;
-  border-top: 1px solid #CFBBA7;
-}
+// .fixed-bottom {
+//   @apply xl:pl-[75px] h-[160px] lg:h-[90px];
+//   padding-top: 17px;
+//   position: fixed;
+//   bottom: 0;
+//   width: 100%;
+//   background-color: #EFE8DE;
+//   left: 0;
+//   border-top: 1px solid #CFBBA7;
+// }
